# deeppath

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.rst  pyproject.toml  requirements_dev.txt  requirements_doc.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package.yml  python-publish.yml
deeppath/: __init__.py  deeppath.py  tree.py
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tests/: __init__.py  test_deeppath.py
